# greenshop

./: .gitignore  pyproject.toml
account/: admin.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
cart/: models.py  serializers.py  signals.py  urls.py  views.py
checkout/: models.py  serializers.py  service.py  urls.py  views.py
greenshop/: asgi.py  settings.py  urls.py  wsgi.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py
product/: admin.py  choices.py  filters.py  models.py  paginations.py  permissions.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_plantimage_options_plant_discount_price_and_more.py
